// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden snapshots of every human view root help: root-help 1`] = `
"--- stdout ---
Agent Profile Kit composes reusable agent material into host-native projects.

Usage: apkit <command> [arguments]

First run:
  apkit init
  apkit bind <profile> --host <host>
  apkit status
  apkit apply

  Choose a Profile with apkit guide profile; see apkit bind --help for
    supported Host values.

Common commands:
  init
    Initialize or adopt the canonical Workspace and settings
  guide
    Show a topic index, full Workspace guidance, or one focused authoring
      example
  new
    Create a Skill or Context Module scaffold in the configured Workspace
  open
    Open the configured Workspace in your system file manager
  bind
    Configure a Project with a Profile and Agent Hosts, or replace an existing
      binding
  validate
    Check Workspace and settings validity
  status
    Show the complete read-only apply plan for the complete fleet, the
      containing Project, or one explicit Project
  apply
    Sync the complete fleet, the containing Project, or one explicit Project

More commands:
  Inventory:
  list
    List read-only inventory for Projects, Profiles, or Hosts
  Teardown:
  unbind
    Remove a configured Project
  uninstall
    Remove proven Agent Profile Kit-owned output from all ordinary Project
      installations
  Machine details:
  info
    Show the engine version and selected application locations

For deeper Workspace authoring guidance (Context Modules, Skills, Profiles,
  and bindings), run apkit guide --full.
--- stderr ---
"
`;

exports[`golden snapshots of every human view machine help: machine-help 1`] = `
"--- stdout ---
Machine-facing commands for external runners and automation. Temporary Profile
  Installation behavior, JSON payloads, and exit codes are unchanged from their
  documented contract.

Usage: apkit machine <command> [arguments]

  machine install-temp <profile> <project> --host <host> [--json]
    Install a temporary Profile into one Project
  machine remove-temp <temporary-installation-id> [--json]
    Remove one temporary Profile
  machine list [temporary [--json]]
    List active temporary Profile inventory for external runners
--- stderr ---
"
`;

exports[`golden snapshots of every human view focused command help: focused-command-help 1`] = `
"--- stdout ---
Purpose: Show the complete read-only apply plan for the complete fleet, the
  containing Project, or one explicit Project

Usage: apkit status [project | --here | --all] [--stale | --blocked] [--verbose] [--json]

Examples:
  apkit status
  apkit status --here
  apkit status ~/projects/example-project
  apkit status --all
  apkit status --blocked
  apkit status --stale --json
  apkit status --json

Writes: Nothing; this command is read-only.

Next: Run apkit apply for pending work after resolving any blockers.
--- stderr ---
"
`;

exports[`golden snapshots of every human view unknown command: unknown-command 1`] = `
"--- stdout ---
--- stderr ---
apkit: unknown command 'nosuch'

Run apkit --help for available commands.
"
`;

exports[`golden snapshots of every human view unknown machine command: unknown-machine-command 1`] = `
"--- stdout ---
--- stderr ---
apkit: unknown machine command 'nosuch'

Run apkit machine --help for available machine commands.
"
`;

exports[`golden snapshots of every human view guide index: guide-index 1`] = `
"--- stdout ---
# Agent Profile Kit guide

Choose a focused authoring topic, read the complete human guide, or open the
  agent workflow reference.

Topics:
  apkit guide profile
    Profile: A Profile selects reusable material for a kind of work through
      its context and skills lists.
  apkit guide context
    Context Module: A Context Module is an independently reusable unit of
      always-loaded guidance. Profiles select it by its frontmatter \`id\`.
  apkit guide skill
    Skill: A Skill is a reusable workflow package. Profiles select it by its
      frontmatter \`name\`, and its description tells an Agent Host when the
      workflow applies.

Complete references:
  apkit guide --full
    Complete human Workspace guide
  apkit guide --agent
    Agent workflow reference

Examples:
  apkit init
  apkit guide profile
  apkit bind example --host codex
--- stderr ---
"
`;

exports[`golden snapshots of every human view focused guide: focused-guide 1`] = `
"--- stdout ---
# Profile

A Profile selects reusable material for a kind of work through its context and
  skills lists.

Workspace: Not configured (run apkit init)

Create \`profiles/example.yaml\`:

\`\`\`yaml
id: example
context:
  - example-context
skills: []
\`\`\`

Create \`context/example-context.md\`:

\`\`\`md
---
id: example-context
dependencies: []
---
Keep project-specific instructions in the project repository.
\`\`\`

Next: run \`apkit bind example --host codex\`.
--- stderr ---
"
`;

exports[`golden snapshots of every human view focused guide context: focused-guide-context 1`] = `
"--- stdout ---
# Context Module

A Context Module is an independently reusable unit of always-loaded guidance.
  Profiles select it by its frontmatter \`id\`.

Workspace: Not configured (run apkit init)

Create \`context/example-context.md\`:

\`\`\`md
---
id: example-context
dependencies: []
---
Keep project-specific instructions in the project repository.
\`\`\`

Next: add \`example-context\` to a Profile's context list.
--- stderr ---
"
`;

exports[`golden snapshots of every human view focused guide skill: focused-guide-skill 1`] = `
"--- stdout ---
# Skill

A Skill is a reusable workflow package. Profiles select it by its frontmatter
  \`name\`, and its description tells an Agent Host when the workflow applies.

Workspace: Not configured (run apkit init)

Create \`skills/example-skill/SKILL.md\`:

\`\`\`md
---
name: example-skill
description: Summarize a change. Use when asked for a concise change summary.
---

# Summarize a change

Describe what changed, how it was verified, and any follow-up work.
\`\`\`

Next: add \`example-skill\` to a Profile's skills list.
--- stderr ---
"
`;

exports[`golden snapshots of every human view full guide: full-guide 1`] = `
"--- stdout ---
# Agent Profile Kit Workspace guide

Agent Profile Kit keeps your reusable, cross-project agent material in one
Workspace. The Workspace is the single canonical source. Profiles select a flat
set of portable artifacts for a kind of work. The Installer installs each bound
Profile into explicitly bound projects as disposable, Host-native output.
Supported Hosts then load that material through ordinary project discovery.

Keep project facts in the relevant project repository. Keep Host preferences,
authentication, credentials, and machine-specific values outside the Workspace.
Edit Workspace files and Local Configuration directly.

## Universal Workspace material

Source ownership and managed delivery are separate:

- The **Workspace** may canonically own both Profile-selected artifacts and
  **unselected universal** artifacts (material useful across every directory or
  kind of work, not only one Profile’s selection). Leaving an artifact unselected
  by every Profile does not make it invalid and does not move its canonical
  source into Host configuration.
- **Profiles** select the artifacts scoped to a kind of work for Agent Profile
  Kit–managed project-bound delivery. A Project Binding selects a project root,
  one Profile, and Hosts; only selected (and Dependency-resolved) artifacts from
  that Profile enter Installation Receipts and the managed lifecycle
  (\`status\`, \`apply\`, and \`uninstall\`).
- Agent Profile Kit v1 does not install, project, synchronize, or remove material in
  personal/global Host roots. Global Host delivery is not APK-owned state: it is
  outside Project Bindings and Installation Receipts, and \`apply\` / \`uninstall\`
  never adopt, record as managed output, or mutate those paths. \`status\` does not
  treat global roots as managed output.
- You may still manage native global delivery yourself—for example by symlinking
  a Host Skill root entry to canonical Workspace source—but that delivery is
  user-managed Host configuration, not Agent Profile Kit–owned state. Agent
  Profile Kit never adopts, tracks, or uninstalls those global paths.
- A Skill may be both universally delivered through Host configuration and
  selected into a bound Profile. The Host owns discovery, precedence,
  deduplication, collision diagnostics, and resolution between those sources.
  Agent Profile Kit blocks only an exact planned destination it cannot safely
  own, not same-identity material elsewhere.

## Initialize

\`apkit init\` creates an empty, schema-versioned Workspace at the
fixed default path \`~/.agents/agent-profile-kit/workspace/\` and a version-2
machine-local Local Configuration at \`~/.agents/agent-profile-kit/config.yaml\`
that explicitly records that path when Local Configuration is absent. Pass one
explicit absolute or home-relative path to choose another destination:

\`\`\`sh
apkit init ~/projects/agent-profile-workspace
\`\`\`

When Local Configuration is absent, an explicit missing or empty non-symlink
destination is fully scaffolded and recorded. A valid existing Workspace,
including a symlink alias, is adopted without changing its source. Rerunning is
safe: it never overwrites the Workspace or current configuration, and it does
not restore optional scaffolding that you removed from a valid Workspace.

To keep the Workspace as an independent Git repository elsewhere, set the
required \`workspace\` field in Local Configuration to one existing absolute or
home-relative path that already contains a valid \`workspace.yaml\`:

\`\`\`yaml
schema_version: 2
workspace: ~/projects/agent-profile-workspace
bindings: []
\`\`\`

Symlinks are supported; relative paths and wildcards are not. When Local
Configuration already selects a Workspace, an explicit \`init <workspace>\` path
must resolve to that same canonical directory, including through an alias;
otherwise initialization fails closed without changing either source or
configuration. Zero-argument \`init\` validates the selected custom path and does
not create, move, copy, adopt, or repair it. Initialization never migrates
Workspace source automatically.

The current Workspace schema version is 1. Its root \`workspace.yaml\` contains
only \`schema_version: 1\`. Local Configuration schema version is 2 and its
\`workspace\` field is required.

### Legacy Local Configuration migration and version compatibility

Version-1 Local Configuration without \`workspace\` is supported only as migration
input. Run \`apkit init\` to upgrade it before using \`validate\`, \`status\`, \`apply\`,
\`bind\`, or \`unbind\`. Those commands never migrate
the file implicitly: they fail closed with actionable \`apkit init\`
guidance while leaving migration to the explicit \`init\` command.

For a legacy file that omitted \`workspace\`, migration records the conventional
default \`~/.agents/agent-profile-kit/workspace/\`. For a legacy file with an
authored path, migration preserves that path. \`init\` validates the selected
Workspace before atomically replacing only Local Configuration, preserving
Project Bindings, comments, line endings, and file mode; it never moves or
rewrites Workspace source. If validation fails, the configuration remains
unchanged.

Before migrating, make and retain a copy of the version-1 Local Configuration:

\`\`\`sh
config_dir="$HOME/.agents/agent-profile-kit"
cp -p "$config_dir/config.yaml" "$config_dir/config.yaml.before-schema-v2"
\`\`\`

Keep this backup until the current CLI has been validated in normal use.
To roll back to an older binary that understands only version-1 configuration,
stop using the current CLI, restore the copy, and run that older binary:

<!-- historical-command-excerpts:start -->
\`\`\`sh
config_dir="$HOME/.agents/agent-profile-kit"
cp -p "$config_dir/config.yaml.before-schema-v2" "$config_dir/config.yaml"
agent-profile-kit validate
\`\`\`
<!-- historical-command-excerpts:end -->

The restored file preserves the pre-migration Workspace selection and Project
Bindings. This reverses only the Local Configuration schema transition; it does
not undo later Workspace content changes.

### Required structure vs initialization scaffolding

A valid Workspace needs only a supported \`workspace.yaml\`. That Manifest is the
Workspace marker. Missing artifact directories are treated as empty categories;
present ones are validated and ingested normally. \`README.md\`, \`AGENTS.md\`, and
\`.gitignore\` are optional user-owned files that the engine never requires.

When creating a **new** Workspace, \`init\` still scaffolds a friendly layout so
you can discover where material belongs:

- artifact directories \`profiles/\`, \`context/\`, \`skills/\`, \`agents/\`, \`hooks/\`,
  and \`tools/\` (with \`.gitkeep\` placeholders)
- a bindable \`profiles/example.yaml\` and its \`context/example-context.md\`
- short bootstrap \`README.md\` and \`AGENTS.md\` pointers to the current guides
- a starter \`.gitignore\`

The example gives a new user one complete \`bind\` → \`status\` → \`apply\` path.
Delete both \`profiles/example.yaml\` and \`context/example-context.md\` together,
unused empty directories, or bootstrap docs if you prefer a minimal tree;
later \`init\` runs do not restore removed optional scaffolding; validation,
status, apply, and uninstall keep working. Do not treat generated Host
output as source material.

## Author the Workspace

This release supports Profile Context and Context Modules for Antigravity,
Codex, Claude Code, Grok, OpenCode, and Pi, and portable Skills for Antigravity,
Codex, Claude Code, Grok, OpenCode, and Pi. Antigravity Context uses \`.agents/rules/\`;
Antigravity, Codex, OpenCode, and Pi Skills install through the qualified shared
\`.agents/skills/<Artifact ID>/\` projection after project-surface capability checks;
Pi and OpenCode resolve other Skills, extensions, and packages through native
Host behavior.
Disabled model-invocation Skills are projected with the shared
\`disable-model-invocation: true\` field while explicit \`/skill:<Artifact ID>\`
activation (or OpenCode \`/<Artifact ID>\` command activation) remains available.
Profiles contain only \`id\`, \`context\`, and \`skills\`; Agents, Hooks, and Tools
are not delivered by this release. A Profile must select at least one supported
artifact overall (Context Module, Skill, or both); no individual category is
mandatory. Context-only, Skills-only, and combined Profiles are valid.

A Context Module is a Markdown file under \`context/\` with frontmatter containing
one stable, lowercase kebab-case \`id\`; the Markdown body is the Context. A Skill
is a standard Agent Skills package under \`skills/\`, rooted at \`SKILL.md\`; its
standard \`name\` is its stable Artifact ID. The frontmatter needs a lowercase
hyphenated \`name\` and a non-empty \`description\`. Scripts, references, and assets
remain ordinary standard Skill content. If a Skill needs Agent Profile Kit-only
dependency metadata, put it in an optional \`agent-profile-kit.yaml\` sidecar.

### Skill model-invocation policy

By default, Hosts may invoke a Skill implicitly when the model matches its
description. To require explicit user invocation while keeping the Skill
available on request, set optional standard namespaced metadata:

\`\`\`yaml
metadata:
  agent-profile-kit.model-invocation: disabled
\`\`\`

Accepted values are the strings \`allowed\` and \`disabled\`. Absence normalizes to
\`allowed\`. Invalid types or values fail at Workspace ingestion.

This is the only portable spelling. Host-native top-level
\`disable-model-invocation\` and Codex-only \`agents/openai.yaml\` policy are not
canonical source fields for Agent Profile Kit: migrate Host-shaped Skills to
the namespaced metadata key above rather than relying on Host-specific
frontmatter. The Installer never rewrites Workspace \`SKILL.md\` during
validate, status, or apply.

Adapters translate the trusted policy only in generated Host output:

| Canonical policy | Claude / Grok generated output | Antigravity / Codex / OpenCode / Pi shared output |
| --- | --- | --- |
| \`allowed\` (default) | No Host restriction field | No Host restriction field |
| \`disabled\` | \`disable-model-invocation: true\` in generated \`SKILL.md\` | \`disable-model-invocation: true\` in generated \`SKILL.md\` plus \`policy.allow_implicit_invocation: false\` in generated \`agents/openai.yaml\` and \`"permission": { "skill": { "<id>": "deny" } }\` in generated \`.opencode/opencode.jsonc\` |

Existing source \`agents/openai.yaml\` content is preserved. An equivalent
invocation policy coalesces; malformed, wrong-type, or conflicting policy
produces one structured project Blocker naming the Workspace and shared
Host-policy authorities with a Workspace repair remedy before any project write. Generated
policy fields carry short deterministic comments. When any selected Skill
disables model invocation, apply-time capability probing checks each selected
Host's enforcement floor: Claude Code CLI
\`2.0.64+\` (same floor as unscoped rules and native Skill discovery, which
honors \`disable-model-invocation\`), Grok CLI \`0.2.0+\` (same floor as project
rules and native Skill discovery, which honors \`disable-model-invocation\`),
Codex CLI \`0.99.0+\` (first stable release with \`agents/openai.yaml\`
\`policy.allow_implicit_invocation\`; see openai/codex#11244 / rust-v0.99.0),
OpenCode CLI \`1.18.23+\` (filters denied Skills from model inventory while
leaving native command activation available), and Pi CLI \`0.82.1+\` (honors
\`disable-model-invocation: true\` in \`SKILL.md\`).
OpenCode records \`native-project-instructions-skills-invocation-v1\` for
explicit-only Skill enforcement or \`native-project-instructions-skills-v1\` for
baseline allowed Skills. Pi records \`native-project-shared-skills-invocation-v1\`
for Skills-only or \`native-project-append-system-shared-skills-invocation-v1\`
for combined Profiles. Antigravity records \`native-project-shared-skills-invocation-v1\`
or \`native-project-always-on-rules-shared-skills-invocation-v1\` for the same two
shapes. Probing is advisory: an older, missing, or unreadable CLI produces a
warning, and the planned policy fields are written regardless — the Adapter
never silently omits or weakens what it plans.

Artifacts may declare required Dependencies with explicit typed references. Put
Context Module Dependencies in their frontmatter and Skill Dependencies in each
Skill's Agent Profile Kit sidecar. Each reference contains \`type\` (\`context\` or
\`skill\`) and its stable \`id\`. Dependencies are resolved transitively and every resolved reason remains
available in live planning. Inclusion reasons are not
persisted in Installation State.

A Profile is a YAML file under \`profiles/\` with exactly an \`id\`, a \`context\`
array, and a \`skills\` array. At least one of \`context\` or \`skills\` must be
non-empty. A Skills-only Profile installs only selected Skill packages for Hosts that
support them and Installer lifecycle metadata—no Context snapshot, Codex
SessionStart hooks, or Claude Context rule. Antigravity Skills-only bindings
check only the shared \`.agents\` and \`.agents/skills\` surfaces. Host capability
probing is scoped to the selected categories (Skills-only does not require Context
machinery). Profiles do not inherit, use wildcards, or carry Host settings.

\`\`\`md
---
id: engineering-rules
dependencies:
  - type: context
    id: security-rules
---
Keep project facts in the project repository.
\`\`\`

\`\`\`yaml
# skills/review-pr/agent-profile-kit.yaml
dependencies:
  - type: skill
    id: write-release-notes
\`\`\`

\`\`\`yaml
id: coding
context:
  - engineering-rules
skills:
  - review-pr
\`\`\`

\`\`\`md
<!-- skills/review-pr/SKILL.md -->
---
name: review-pr
description: Review a pull request. Use when asked to review code changes.
---

# Review a pull request
\`\`\`

\`\`\`md
<!-- skills/to-spec/SKILL.md — explicit-only invocation -->
---
name: to-spec
description: Turn the current conversation into a spec.
metadata:
  agent-profile-kit.model-invocation: disabled
---

# To spec
\`\`\`

## Bind projects in Local Configuration

Project Bindings live only in machine-local
\`~/.agents/agent-profile-kit/config.yaml\`. Each binding names exactly one
existing absolute or home-relative project root, one Profile, and a non-empty set
of supported Hosts (\`antigravity\`, \`codex\`, \`claude\`, \`grok\`, \`opencode\`, \`pi\`). Host order
and duplicate entries normalize at ingestion. There are no wildcards, recursive scans,
hidden default projects, Host auto-detection, per-session Profile selection, or
Profile version pins. A project root may appear in only one binding.

Hand-edit \`config.yaml\`, or record one binding with the authoring-only command
(does not install or reconcile project output):

\`\`\`sh
apkit bind coding --host codex
apkit bind coding ~/projects/tools/agent-profile-kit --host antigravity --host codex --host claude --host grok --host opencode --host pi
\`\`\`

Omit the project argument to use the current working directory. At least one
\`--host\` flag is required. An identical binding is left unchanged; a different
Profile or Host set for the same project fails instead of overwriting. Do not
hand-edit \`config.yaml\` while \`bind\` is running: \`bind\` commands serialize with
each other, but a text editor does not participate in that lock. After binding,
run \`validate\`, then \`status\` and \`apply\` separately.

Remove desired state with the recording-only command:

\`\`\`sh
apkit unbind
apkit unbind ~/projects/tools/agent-profile-kit
\`\`\`

Omitting the project targets the canonical current working directory. Existing
paths use the same canonical-root rules as bindings, including symlink aliases.
When a project no longer exists, \`unbind\` can remove a binding only when the
argument exactly matches its authored \`project\` spelling; it never guesses an
alias. \`unbind\` edits Local Configuration only and leaves generated output for
the next fleet \`status\` and \`apply --all\`. Cooperating \`bind\` and \`unbind\` commands
serialize and publish atomically; do not hand-edit the file concurrently.

\`\`\`yaml
schema_version: 1
bindings:
  - project: ~/projects/tools/agent-profile-kit
    profile: coding
    hosts:
      - codex
      - claude
  - project: /Users/you/work/customer-portal
    profile: coding
    hosts:
      - claude
\`\`\`

## Validate, status, and apply

For Codex bindings that select Context, the Adapter requires Codex CLI 0.145.0 or
newer so the generated SessionStart handler can deliver the complete Context
envelope without Codex's default head-and-tail spill. Host capability probing is
advisory: during \`apply\`, an older, missing, or unreadable Codex CLI produces a
warning while the planned project and Installation State writes proceed
regardless. \`status\` performs no Agent Host process execution and no capability
probing; a Project-scoped \`status\` or \`apply\` plans only its
selected binding. \`apply --all\` writes every selected Project including any with
Host capability warnings; global Blockers still stop every fleet write.
Skills-only Codex bindings do
not require this floor. Review and trust the generated project SessionStart hook
in Codex for each bound project. Lifecycle hooks are enabled by default. Agent Profile Kit checks the effective global and project configuration
during apply and warns when hooks are explicitly disabled, when relevant
configuration is malformed or unreadable, or when \`hooks\` or the deprecated
\`codex_hooks\` alias is not a boolean. These warnings do not block installation,
but generated Context may not load until the setting is corrected. Project configuration takes
precedence over global configuration. If \`CODEX_HOME\` is set, Codex reads its
global configuration from \`CODEX_HOME/config.toml\`; otherwise it uses
\`~/.codex/config.toml\`. Skills-only Codex bindings do not require hooks.

Run \`apkit validate\` to check the Workspace and every Project Binding.
Review the concise read-only reconciliation outcome with
\`apkit status\`. It leads with whether reconciliation can proceed,
groups changes and blockers by Profile Installation, and summarizes
changed file paths with \`+\`, \`~\`, \`-\`, or \`!\` markers without listing unchanged
output. Long lists are capped with an overflow pointer to \`--verbose\`.
Non-current Profile Installation states such as \`stale source\`, \`blocked\`, or
\`removal\` get a short explanation when present (once per distinct state across
installations). Pending Git exclusion work appears as one concise clause; exact
targets and path changes are reserved for \`--verbose\`. When action is
useful, concise results end with one next-action line derived from the same
attention surface as the report body: actionable \`status\` points directly to the
matching apply command; a ready fleet \`status --all\` recommends \`apply --all\`; a
blocked result tells you to resolve the reported blocker and retry the same
command you just ran; current status and completed or no-op \`apply\` results omit
a next step. \`status\` and \`apply\` default to the bound Project containing the
current working directory and accept one explicit existing absolute or
home-relative bound Project root. Use \`--all\` as the only fleet scope. Scoped
planning, Git and ownership inspection, reconciliation, reports,
and writes exclude unrelated Projects; a shared Git exclusion file changes only
through the selected installation's contribution-aware union. Host capability
probing is advisory and happens only during \`apply\`: a missing or outdated Host
CLI produces a warning and the planned output is written regardless; capability
problems never block application and do not mark generated files as drifted.

For focused per-output and state diagnostics, append \`--verbose\` to \`status\` or \`apply\`. Warnings, blockers, drift reasons, and removal
intent remain visible in the concise view. Git-tracked-path blockers explain
that repository-owned content is not replaced because generated Profile
Installation output must be exclusively Installer-owned.

Git is optional. For a Git binding, \`apply\` installs only into the exact bound
project directory. The Installer uses Git for tracked-path protection and local
exclusions but does not inspect or report worktree topology. Bind any additional
root explicitly only when Hosts must be launched directly from that root; it
then follows the same lifecycle as any other binding.

For every bound project root, the ordinary removal order is:

\`\`\`sh
apkit unbind /path/to/project
apkit apply --all
# Now delete the project directory.
\`\`\`

If the project directory was deleted first, run \`unbind\` with its exact authored
path. That explicit action confirms the deletion was intentional; the next
\`apply --all\` retires its machine-local installation record without attempting
project filesystem deletion and cleans any separately surviving local Git
exclusions whose ownership was recorded. Restoring the project later requires a
new \`bind\` and \`apply\`.

Generated output is owned whole: complete files and artifact directories whose
Installation Receipt proves Agent Profile Kit ownership, with the receipt's
recorded hashes providing the continuity evidence that extant material is what
Agent Profile Kit last published. Unrelated project files,
repository-owned instructions, global Host configuration, authentication, trust,
approvals, plugins, and sessions remain untouched. Agent Profile Kit does not
merge selected fields into Host or repository configuration, install a watcher or
Git hook, or modify shared \`.gitignore\` files.

For a currently bound installation, \`apply\` recreates a
recorded output that is completely missing when normal path-conflict checks
pass. Modified output is ordinary refresh work while at least one recorded root
still matches its recorded hash; when no recorded root matches, ownership
continuity cannot be proven and \`status\` blocks until you restore or remove the
generated files. Unexpected directory members are never overwritten.

## Use Hosts natively

After \`apply\`, launch Antigravity, Codex, Claude Code, Grok, OpenCode, or Pi from the
bound project the way you normally would. Agent Profile Kit does not manage their
authentication, trust, approvals, plugins, or sessions, and does not launch
Hosts.

### Antigravity

Antigravity receives Profile Context through deterministic always-on rules under
\`.agents/rules/\`. The Adapter requires \`agy\` CLI 1.1.13 or newer and writes one
rule for the Profile envelope followed by one complete rule per Context Module.
Each generated rule contains \`trigger: always_on\` frontmatter and must stay at or
below 12,000 characters. If one Context Module is too large, status reports a
structured blocker instead of truncating it.

Antigravity discovers the rules from the current bound project; you do not need
to create or select an Antigravity Project. Trust is Host-owned: after \`apply\`,
trust the bound project in Antigravity if it asks. Agent Profile Kit does not
read or change trust, settings, authentication, plugins, Project records,
\`AGENTS.md\`, or \`GEMINI.md\`. A standing trust reminder appears for every
non-empty Antigravity plan, but unproven trust never blocks safe writes.

Antigravity also discovers selected Skills through the qualified shared
\`.agents/skills/<Artifact ID>/\` projection used by Codex and Pi. The complete
package preserves standard members and, for disabled Skills, both the generated
\`disable-model-invocation: true\` field and Codex \`agents/openai.yaml\` policy.
Antigravity's native discovery, trust, settings, and effective inventory remain
Host-owned.

### Codex

Codex receives the complete Profile Context through a native project SessionStart hook and
discovers selected Skills under \`.agents/skills/<Artifact ID>/\`. When Context is
installed, Codex asks you to review the generated hook: review its contents and
approve it when they match the expected SessionStart behavior, because declining
it prevents Profile Context from loading. Before launching Codex,
trust each bound project in Codex — project trust is Host-owned and is not
configured by Agent Profile Kit.
Ordinary launches from a Git project's bound directory or its descendants receive
that material. For a non-Git project, launch Codex from the exact bound root;
launching from a descendant prevents Profile Context from loading. Skills-only
Codex Profiles generate no hook and require no hook approval.

### Claude Code

Claude Code receives Profile Context as an unscoped owned project rule under
\`.claude/rules/\` and discovers selected Skills under
\`.claude/skills/<Artifact ID>/\`. Ordinary Claude launches in the bound project
load that material. Claude project rules do not depend on Git.

### Pi

Pi receives Profile Context through the owned project file
\`.pi/APPEND_SYSTEM.md\`. The Pi Adapter requires CLI 0.82.1 or newer and
proves that \`.pi\` and the append-system destination are compatible before
Context writes; Skill-bearing Profiles instead prove the shared \`.agents\` and
\`.agents/skills\` surfaces. Profiles with portable Skills receive one shared
package per resolved Artifact ID under \`.agents/skills/<Artifact ID>/\`;
standard package bytes and modes are preserved and \`agent-profile-kit.yaml\` is
omitted. Codex and Pi co-own one normalized package when both are selected;
the package carries every required Host policy field without adding consumer
metadata to Skill source. Pi owns Skill resolution across personal, project,
ancestor, package, extension, and configured sources. Disabled
model-invocation Skills receive top-level \`disable-model-invocation: true\` in
generated \`SKILL.md\` while the canonical Workspace source remains unchanged
and explicit \`/skill:<Artifact ID>\` activation remains available. Malformed or
unreadable relevant settings warn without blocking. Pi's native project trust,
authentication, settings, prompt files, and per-session overrides remain
Host-owned.

### OpenCode

OpenCode receives Profile Context through the owned composed Context document
at \`.agent-profile-kit/opencode/context.md\` and references it through the
additive \`instructions\` list inside the claimed configuration file at
\`.opencode/opencode.jsonc\`. OpenCode combines this configuration with
user-authored slots via native additive merging, and the Project-relative
reference continues to load Context when OpenCode is launched from any subdirectory.
The OpenCode Adapter requires CLI 1.18.23 or newer. When configuration is planned
(Context or disabled Skills), the Adapter emits one transition launch-constraint
Host Setup Step tied to \`.opencode/opencode.jsonc\` reminding you to restart
running OpenCode sessions.

OpenCode discovers selected Skills through the qualified shared
\`.agents/skills/<Artifact ID>/\` projection used by Antigravity, Codex, and Pi.
When trusted model-invocation policy is \`disabled\`, the OpenCode Adapter
configures an Artifact-ID-keyed global Skill permission rule with action \`deny\`
inside \`.opencode/opencode.jsonc\`. OpenCode filters denied Skills from the
model-facing inventory while native Command activation (\`/<Artifact ID>\`)
remains available. When Claude and OpenCode are co-selected in a Project Binding
with Skills, OpenCode natively discovers Skills under both \`.claude/skills\` and
\`.agents/skills\` and reports duplicate Skill names; the OpenCode Adapter emits
one non-blocking diagnostic warning naming both roots. OpenCode's native
discovery, configuration slots, and session commands remain Host-owned.

### Precedence and conflicts

Repository-owned project instructions take precedence over Profile Context on
conflict. Agent Profile Kit does not detect or resolve contradictions in prose;
conflicting guidance remains visible to you and the Host. Global Host
configuration and repository-owned files stay live and unchanged.

### Installation State compatibility and recovery

Installation State is durable machine-local ownership evidence at
\`~/.agents/agent-profile-kit/state/manifest.json\`. It is not Workspace source,
but lifecycle safety depends on it for movement, repair, uninstall, Temporary
Profile Installation recovery, and repository-local exclusion cleanup. Do not
edit it by hand or reconstruct it from generated project output.

Agent Profile Kit reads strict JSON at Ownership State schema versions 6 through
9 and writes schema version 9. The writer validates
the exact serialized bytes through the production reader before atomic rename.
Active ordinary and temporary installations use one minimal receipt shape;
removed temporary identities retain only the compact ID needed for idempotent
retry. Directory receipts retain one aggregate root hash, not complete member
trees.

The pre-1.0 YAML migration window is closed. If \`state/manifest.yaml\` remains,
install the shipped Agent Profile Kit 0.95.0 release, run a successful
state-writing lifecycle command to publish \`manifest.json\`, and then retry with
the current release. Current commands reject the YAML file without parsing,
changing, or removing it.

Back up current \`manifest.json\` with ordinary machine backup tooling. If the
current state is missing or malformed, restore a known-good backup and retry.
Agent Profile Kit never adopts surviving generated output or reconstructs
ownership from it.

Without a backup, stop the CLI and manually remove only project output whose
ownership you independently verify, including any
\`.agent-profile-kit/installation.json\` file left by an older version. In each affected
\`.git/info/exclude\`, remove only the marked block between
\`# BEGIN Agent Profile Kit generated paths\` and
\`# END Agent Profile Kit generated paths\`; preserve every unrelated byte. Then
recreate the desired Project Bindings and run \`apkit apply\` to establish fresh
ownership receipts. This manual path is intentionally fail-closed.

### Host Resolution and project-bound Profiles

This section is the Host-path detail for the
[Universal Workspace material](#universal-workspace-material) boundary.

Agent Profile Kit installs selected Skills only into the bound **project**
(\`.agents/skills/<Artifact ID>/\` for Antigravity, Codex, OpenCode, and Pi,
\`.claude/skills/<Artifact ID>/\` for Claude, \`.grok/skills/<Artifact ID>/\` for
Grok). Antigravity Profile Context uses \`.agents/rules/\` alongside its shared
Skill packages. It never installs into, adopts, disables, or removes
personal/global Host Skill folders. Unselected Workspace
Skills are not installed into projects either; they may remain valid Workspace
source without any APK-managed delivery.

Those global folders remain Host-owned:

- Codex: \`~/.agents/skills/\` and \`~/.codex/skills/\`
- Claude Code: \`~/.claude/skills/\`
- Grok: \`~/.grok/skills/\` (plus enabled compatibility roots and configured
  \`[skills].paths\`; see \`grok inspect\`)
- OpenCode: personal/global configured directories
- Pi: \`~/.pi/skills/\` (plus configured sources)

Selected Skills may share an identity with material from these roots, packages,
plugins, extensions, compatibility sources, or other Host-native locations.
The Host owns discovery, precedence, deduplication, collision diagnostics, and
resolution across those sources. Agent Profile Kit neither scans an effective
inventory nor asks you to remove same-identity material.

Where a disable is detectable without reconstructing Host Resolution, the
Adapter warns: Codex checks SessionStart hooks and Grok checks
\`[skills].disabled\` and \`[skills].ignore\`. Malformed or unreadable
configuration that an Adapter reads for planned output also warns; Pi's
settings rule is described in its Adapter section above. Capability failures,
unrepresentable portable semantics, and exact Output Ownership Conflicts at the
planned project destination remain blockers.

## Status, unbind, and uninstall

Use \`apkit status\` for the bound Project containing the current directory, pass
one explicit Project root, or use \`apkit status --all\` to inspect every binding.
It reports current, not installed, stale source, drifted output (including wholly absent
owned output), malformed ownership, and blocked installations, while keeping Host
configuration warnings visible.

Use \`apkit unbind [project]\` to remove desired Project Binding state.
It does not delete generated output. When an installed receipt remains, its
output recommends the fleet \`status --all\` and \`apply --all\` needed to review and
reconcile the former installation; after \`uninstall\`, it omits that no-op step.

To delete generated output directly, use \`apkit uninstall\`. It names each
affected project, removed generated path, and cleaned Git exclusion entry. It
removes only Installation Receipt-proven output and preserves the
Workspace and Local Configuration, including Project Bindings. It writes no teardown provenance. Because the Project Binding remains, the next
\`status\` reports the Project as not installed and eligible for \`apply\`, rather
than as unsafe unexplained missing output. \`unbind\` changes desired state;
\`uninstall\` removes proven output. Neither command modifies
personal/global Host configuration or repository-owned files.

Review personal content before publishing this Workspace. Agent Profile Kit does
not classify private material, and credential values do not belong in a Workspace
regardless of whether you publish it.

For the complete human guide, run \`apkit guide --full\`.
For help authoring with an agent, run \`apkit guide --agent\`.
For a short copyable example, run \`apkit guide profile\`, \`apkit guide context\`,
or \`apkit guide skill\`.
--- stderr ---
"
`;

exports[`golden snapshots of every human view agent guide: agent-guide 1`] = `
"--- stdout ---
# Agent Profile Kit agent workflow

Use this workflow when helping a person author their Workspace and bind projects.

1. Read this guide first. Then inspect the Workspace: start with \`workspace.yaml\`
   and its schema version. A valid Workspace needs only that Manifest; missing
   artifact directories are empty categories, and bootstrap files such as
   \`README.md\`, \`AGENTS.md\`, and \`.gitignore\` are optional scaffolding from
   \`init\`, not format requirements. Use \`apkit init\` for the fixed
   default or \`apkit init <workspace>\` for one explicit absolute or
   home-relative destination; missing and empty non-symlink destinations are
   scaffolded, while valid existing Workspaces are adopted without source
   changes. Inspect any present artifact directories next. Treat the Workspace
   as the canonical source; do not infer reusable material from generated Host
   output.
2. Elicit the user's needs one decision at a time. Establish the kind of work,
   the reusable facts or workflow they want, and whether existing material
   already satisfies the need. Ask instead of inventing personal preferences,
   project facts, Host preferences, credentials, or machine paths.
3. Create the smallest useful artifact set. This release accepts Profile Context
   and shared Skills for Antigravity, plus portable Context and Skills for Codex,
   Claude Code, Grok, OpenCode, and Pi. Put standing facts in
   Context Modules and reusable procedures in Skills. A Profile needs at least
   one supported artifact (Context, Skills, or both); Context is not mandatory—a
   Skills-only Profile is valid. For Skills that must not fire implicitly, use
   \`metadata.agent-profile-kit.model-invocation: disabled\` (default is
   \`allowed\`); do not leave Host-native \`disable-model-invocation\` in
   Workspace source (Adapters project that field for Claude, Grok, and Pi). Profiles
   contain exactly \`id\`, \`context\`, and \`skills\`. Do not create a new artifact merely because
   a directory exists, and do not invent Agents, Hooks, or Tools
   for this release.
4. Preserve boundaries.
   - **Workspace** owns reusable cross-project Profiles and artifacts as the
     single canonical source. That includes Profile-selected material and
     unselected universal artifacts (useful across every directory or kind of
     work). Unselected does not mean “belongs in Host config.”
   - **Local Configuration** (\`~/.agents/agent-profile-kit/config.yaml\`) owns
     machine-local Project Bindings and the explicit Workspace path. Current
     schema version 2 requires one existing absolute or home-relative Workspace
     path and each binding names one existing project root, one Profile, and a
     supported Host set (\`antigravity\`, \`codex\`, \`claude\`, \`grok\`, \`opencode\`, or \`pi\`); Host
     order and duplicate entries normalize at ingestion. A version-1 configuration without
     \`workspace\` is legacy migration input only; run \`apkit init\` before any desired-state
     or binding-recording command.
   - **Project repositories** own project facts and repository-owned instructions.
   - **Hosts** own authentication, trust, approvals, plugins, sessions, and
     Host preferences. User-managed native global Skill delivery (including
     Host-root symlinks into Workspace source) is Host configuration, not
     Agent Profile Kit–owned state: outside Project Bindings and Installation
     Manifests; \`apply\` / \`uninstall\` never adopt or remove those paths. v1 does
     not manage global Host delivery. Hosts own Skill discovery, precedence,
     deduplication, collision diagnostics, and resolution across project,
     personal, package, plugin, extension, and compatibility sources.
   - **Generated output** is disposable Installer-owned material inside bound
     projects. Never copy it back into the Workspace as source.
   - Same-identity Skill material outside an exact planned output destination is
     Host Resolution, not an Agent Profile Kit blocker. Concrete Host settings
     that disable planned output may warn; exact Output Ownership Conflicts and
     unsupported capability remain blockers.
5. Author bindings in Local Configuration—either hand-edit \`config.yaml\` or run
   recording-only \`apkit bind <profile> [project] --host <host>…\`
   (cwd when project is omitted; at least one explicit \`--host\` required). Do not
   invent project roots or Host lists. Use only explicit paths the user confirms.
   Reject wildcards, recursive scans, Host auto-detection, all-Hosts defaults,
   per-session selection, and Profile version pins. \`bind\` never applies output;
   after recording, continue with validate/status/apply. To remove desired
   state, use \`apkit unbind [project]\`; it defaults to cwd, matches
   existing paths canonically, and permits missing-path recovery only by exact
   authored spelling. \`unbind\` never removes generated output.
6. Validate before applying. Context Modules use \`id\` frontmatter and flat
   Profiles contain \`id\`, \`context\`, and \`skills\` only. Dependencies use
   explicit \`{ type, id }\` references. Run \`apkit validate\`, review
   the concise fleet outcome from \`apkit status --all\`, and ask before applying
   all configured Project Bindings with \`apkit apply --all\`. Use Project-scoped
   \`apply [project]\` only when the user intends one bound Project. Use
   \`apkit status --verbose\` or \`apkit apply --verbose\` when complete
   per-output diagnostics, resolved artifact reasons, or composed Context are
   needed. For automation, add \`--json\` on those two commands: exit \`0\` means
   no tool error and no blockers (JSON \`outcome\` may still be \`attention\`),
   exit \`1\` is a tool error, and exit \`2\` means blockers. The current Workspace
   schema version is 1.
7. After apply, the user launches Antigravity, Codex, Claude, Grok, OpenCode, or Pi
   natively in the bound project. Do not claim that Agent Profile Kit manages
   Host authentication, trust, approvals, plugins, or sessions. Antigravity
   bindings load deterministic always-on Context rules under \`.agents/rules/\`
   and shared \`.agents/skills/<Artifact ID>\` packages after the user's native
   trust step. OpenCode bindings load Profile Context via \`.opencode/opencode.jsonc\`
   and \`.agent-profile-kit/opencode/context.md\` and shared \`.agents/skills/<Artifact ID>\`
   packages after restarting running sessions. Pi bindings load the generated
   \`.pi/APPEND_SYSTEM.md\` and shared \`.agents/skills/<Artifact ID>\` packages after
   Pi's native trust boundary; packages, extensions, and other Skill sources coexist
   through Pi Host Resolution. For non-Git projects, remind the user that Codex must
   launch from the exact bound root.
8. Use \`apkit status\` for the bound Project containing cwd, pass one explicit
   Project root, or use \`apkit status --all\` for the fleet. Its concise result
   reports all-current state when nothing needs action, labels change
   paths with \`+\`, \`~\`, \`-\`, or \`!\` markers, caps long lists with a pointer to
   \`--verbose\`, explains non-current states when they appear, preserves warnings
   and blockers, and ends with one next-action line when useful (run the matching
   apply for pending work; resolve a blocker and retry status when blocked; omit
   when already current). Pending Git exclusion work appears as one concise clause.
   A ready fleet \`status --all\` recommends \`apply --all\`; blocked \`status\` or
   \`apply\` retries that command after the blocker. Add
   \`--verbose\` to distinguish current, stale, drifted, missing, and blocked
   installations and inspect exact Git exclusion paths in the complete report.
   \`apkit unbind\` removes desired
   Project Binding state but leaves generated output for fleet \`status --all\` and
   \`apply --all\`. \`apkit uninstall\` instead removes only output whose Installation Receipt
   and hashes prove Agent Profile Kit ownership; it preserves the Workspace,
   Local Configuration, global Host configuration, and repository-owned files.
   Never use \`uninstall\` as a substitute for removing a binding, or \`unbind\` as
   a substitute for output cleanup.

If the user plans to publish the Workspace, remind them to review personal
content. Credentials are invalid in a Workspace regardless of publication
visibility.
--- stderr ---
"
`;

exports[`golden snapshots of every human view info: info 1`] = `
"--- stdout ---
Engine version: 0.168.0
Workspace: ~/.agents/agent-profile-kit/workspace
Local Configuration: ~/.agents/agent-profile-kit/config.yaml
Installation State: ~/.agents/agent-profile-kit/state/manifest.json
--- stderr ---
"
`;

exports[`golden snapshots of every human view list index: list-index 1`] = `
"--- stdout ---
Inventory topics:
  apkit list projects
    Configured Project inventory from settings.
  apkit list profiles
    Profile inventory from the selected Workspace.
  apkit list hosts
    Supported Agent Hosts for configured Projects.
--- stderr ---
"
`;

exports[`golden snapshots of every human view list projects: list-projects 1`] = `
"--- stdout ---
Projects (2):

~/projects/demo   example  codex  configured
~/projects/other  example  codex  configured

2 Projects configured.
Use apkit status to inspect Project lifecycle diagnostics.
--- stderr ---
"
`;

exports[`golden snapshots of every human view list profiles: list-profiles 1`] = `
"--- stdout ---
Profiles (1):

Profile: example
  Context Modules: 1
  Skills: 0

Use <profile> with apkit bind to select it for a configured Project.
--- stderr ---
"
`;

exports[`golden snapshots of every human view list hosts: list-hosts 1`] = `
"--- stdout ---
Supported Hosts:
  antigravity
  claude
  codex
  grok
  opencode
  pi

Use <host> with apkit bind to select it for a configured Project.
--- stderr ---
"
`;

exports[`golden snapshots of every human view machine list index: machine-list-index 1`] = `
"--- stdout ---
Inventory topics:
  apkit machine list temporary
    Active temporary Profile inventory.
--- stderr ---
"
`;

exports[`golden snapshots of every human view machine list temporary: machine-list-temporary 1`] = `
"--- stdout ---
No temporary Profiles are active.
Create one with apkit machine install-temp <profile> <project> --host <host>.
--- stderr ---
"
`;

exports[`golden snapshots of every human view init: init 1`] = `
"--- stdout ---
Initialized Agent Profile Kit Workspace and settings at
  ~/.agents/agent-profile-kit/workspace
A Profile is a named selection of Context and Skills to adapt for your
  projects.
Detected Agent Hosts: antigravity, claude, codex, grok, opencode, pi
Next: from the project you want to try, run
  apkit bind example --host antigravity
--- stderr ---
"
`;

exports[`golden snapshots of every human view open: open 1`] = `
"--- stdout ---
--- stderr ---
"
`;

exports[`golden snapshots of every human view new skill: new-skill 1`] = `
"--- stdout ---
Created Skill review-pr at
  /private/tmp/apkit-golden-xxxx/.agents/agent-profile-kit/workspace/skills/review-pr/SKILL.md
Next: select the Skill from a Profile, then run apkit validate
--- stderr ---
"
`;

exports[`golden snapshots of every human view new context: new-context 1`] = `
"--- stdout ---
Created Context Module review-standards at
  /private/tmp/apkit-golden-xxxx/.agents/agent-profile-kit/workspace/context/review-standards.md
Next: select the Context Module from a Profile, then run apkit validate
--- stderr ---
"
`;

exports[`golden snapshots of every human view bind success: bind-success 1`] = `
"--- stdout ---
Recorded configured Project for ~/projects/demo
  Profile: example
  Hosts: codex
Next: apkit status
--- stderr ---
"
`;

exports[`golden snapshots of every human view validate: validate 1`] = `
"--- stdout ---
Workspace and settings valid (1 Profile, 1 configured Project)
Profiles found: example
Hosts bound: codex
Next: apkit status
--- stderr ---
"
`;

exports[`golden snapshots of every human view status current: status-current 1`] = `
"--- stdout ---
All Projects are current (1 Project)
--- stderr ---
"
`;

exports[`golden snapshots of every human view status pending: status-pending 1`] = `
"--- stdout ---
Ready to apply
- not installed yet (1): ~/projects/demo
Next: apkit apply ~/projects/demo

Details: apkit status ~/projects/demo --verbose
--- stderr ---
"
`;

exports[`golden snapshots of every human view status blocked: status-blocked 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/blocked
    Blocker: .codex/hooks.json is tracked by Git, so Agent Profile Kit cannot
      write to it.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/blocked' rm -r --cached -- '.codex/hooks.json'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/blocked'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/blocked'.
      Affected paths (1):
        - .codex/hooks.json

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run apkit status ~/projects/blocked again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status tracked counts grouped-twelve: status-tracked-counts-grouped-twelve 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/tracked-counts
    Blocker: .agents/skills/s001 and 13 more files are tracked by Git, so
      Agent Profile Kit cannot write to them.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/tracked-counts' rm -r --cached -- '.agents/skills/s001' '.agents/skills/s002' '.agents/skills/s003' '.agents/skills/s004' '.agents/skills/s005' '.agents/skills/s006' '.agents/skills/s007' '.agents/skills/s008' '.agents/skills/s009' '.agents/skills/s010' '.agents/skills/s011' '.agents/skills/s012' '.claude/skills/single' '.grok/skills/single'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
      Affected paths (14):
        - .agents/skills/ (12 paths)
        - .claude/skills/single
        - .grok/skills/single

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/tracked-counts
  again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status tracked counts eleven-no-cap: status-tracked-counts-eleven-no-cap 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/tracked-counts
    Blocker: .agents/skills/s001 and 10 more files are tracked by Git, so
      Agent Profile Kit cannot write to them.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/tracked-counts' rm -r --cached -- '.agents/skills/s001' '.agents/skills/s002' '.agents/skills/s003' '.agents/skills/s004' '.agents/skills/s005' '.agents/skills/s006' '.agents/skills/s007' '.agents/skills/s008' '.agents/skills/s009' '.agents/skills/s010' '.agents/skills/s011'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
      Affected paths (11):
        - .agents/skills/ (11 paths)

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/tracked-counts
  again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status tracked counts root-immediate-parent-equivalent: status-tracked-counts-root-immediate-parent-equivalent 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/tracked-counts
    Blocker: .agents/skills/s001 and 5 more files are tracked by Git, so Agent
      Profile Kit cannot write to them.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/tracked-counts' rm -r --cached -- '.agents/skills/s001' '.agents/skills/s002' '.claude/skills/s001' '.claude/skills/s002' '.grok/skills/s001' '.grok/skills/s002'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
      Affected paths (6):
        - .agents/skills/ (2 paths)
        - .claude/skills/ (2 paths)
        - .grok/skills/ (2 paths)

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/tracked-counts
  again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status tracked counts overlapping-parent-equivalent: status-tracked-counts-overlapping-parent-equivalent 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/tracked-counts
    Blocker: .agents/skills/s001 and 2 more files are tracked by Git, so Agent
      Profile Kit cannot write to them.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/tracked-counts' rm -r --cached -- '.agents/skills/s001' '.agents/skills/s002' '.claude/skills/single'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
      Affected paths (3):
        - .agents/skills/ (2 paths)
        - .claude/skills/single

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/tracked-counts
  again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status tracked counts deterministic-order: status-tracked-counts-deterministic-order 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/tracked-counts
    Blocker: .agents/skills/alpha and 2 more files are tracked by Git, so
      Agent Profile Kit cannot write to them.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/tracked-counts' rm -r --cached -- '.agents/skills/alpha' '.claude/skills/beta' '.grok/skills/zeta'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
      Affected paths (3):
        - .agents/skills/alpha
        - .claude/skills/beta
        - .grok/skills/zeta

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/tracked-counts
  again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status tracked counts large-60-60-30: status-tracked-counts-large-60-60-30 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/tracked-counts
    Blocker: .agents/skills/s001 and 149 more files are tracked by Git, so
      Agent Profile Kit cannot write to them.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/tracked-counts' rm -r --cached -- '.agents/skills/s001' '.agents/skills/s002' '.agents/skills/s003' '.agents/skills/s004' '.agents/skills/s005' '.agents/skills/s006' '.agents/skills/s007' '.agents/skills/s008' '.agents/skills/s009' '.agents/skills/s010' '.agents/skills/s011' '.agents/skills/s012' '.agents/skills/s013' '.agents/skills/s014' '.agents/skills/s015' '.agents/skills/s016' '.agents/skills/s017' '.agents/skills/s018' '.agents/skills/s019' '.agents/skills/s020' '.agents/skills/s021' '.agents/skills/s022' '.agents/skills/s023' '.agents/skills/s024' '.agents/skills/s025' '.agents/skills/s026' '.agents/skills/s027' '.agents/skills/s028' '.agents/skills/s029' '.agents/skills/s030' '.agents/skills/s031' '.agents/skills/s032' '.agents/skills/s033' '.agents/skills/s034' '.agents/skills/s035' '.agents/skills/s036' '.agents/skills/s037' '.agents/skills/s038' '.agents/skills/s039' '.agents/skills/s040' '.agents/skills/s041' '.agents/skills/s042' '.agents/skills/s043' '.agents/skills/s044' '.agents/skills/s045' '.agents/skills/s046' '.agents/skills/s047' '.agents/skills/s048' '.agents/skills/s049' '.agents/skills/s050' '.agents/skills/s051' '.agents/skills/s052' '.agents/skills/s053' '.agents/skills/s054' '.agents/skills/s055' '.agents/skills/s056' '.agents/skills/s057' '.agents/skills/s058' '.agents/skills/s059' '.agents/skills/s060' '.claude/skills/s001' '.claude/skills/s002' '.claude/skills/s003' '.claude/skills/s004' '.claude/skills/s005' '.claude/skills/s006' '.claude/skills/s007' '.claude/skills/s008' '.claude/skills/s009' '.claude/skills/s010' '.claude/skills/s011' '.claude/skills/s012' '.claude/skills/s013' '.claude/skills/s014' '.claude/skills/s015' '.claude/skills/s016' '.claude/skills/s017' '.claude/skills/s018' '.claude/skills/s019' '.claude/skills/s020' '.claude/skills/s021' '.claude/skills/s022' '.claude/skills/s023' '.claude/skills/s024' '.claude/skills/s025' '.claude/skills/s026' '.claude/skills/s027' '.claude/skills/s028' '.claude/skills/s029' '.claude/skills/s030' '.claude/skills/s031' '.claude/skills/s032' '.claude/skills/s033' '.claude/skills/s034' '.claude/skills/s035' '.claude/skills/s036' '.claude/skills/s037' '.claude/skills/s038' '.claude/skills/s039' '.claude/skills/s040' '.claude/skills/s041' '.claude/skills/s042' '.claude/skills/s043' '.claude/skills/s044' '.claude/skills/s045' '.claude/skills/s046' '.claude/skills/s047' '.claude/skills/s048' '.claude/skills/s049' '.claude/skills/s050' '.claude/skills/s051' '.claude/skills/s052' '.claude/skills/s053' '.claude/skills/s054' '.claude/skills/s055' '.claude/skills/s056' '.claude/skills/s057' '.claude/skills/s058' '.claude/skills/s059' '.claude/skills/s060' '.grok/skills/s001' '.grok/skills/s002' '.grok/skills/s003' '.grok/skills/s004' '.grok/skills/s005' '.grok/skills/s006' '.grok/skills/s007' '.grok/skills/s008' '.grok/skills/s009' '.grok/skills/s010' '.grok/skills/s011' '.grok/skills/s012' '.grok/skills/s013' '.grok/skills/s014' '.grok/skills/s015' '.grok/skills/s016' '.grok/skills/s017' '.grok/skills/s018' '.grok/skills/s019' '.grok/skills/s020' '.grok/skills/s021' '.grok/skills/s022' '.grok/skills/s023' '.grok/skills/s024' '.grok/skills/s025' '.grok/skills/s026' '.grok/skills/s027' '.grok/skills/s028' '.grok/skills/s029' '.grok/skills/s030'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/tracked-counts'.
      Affected paths (150):
        - .agents/skills/ (60 paths)
        - .claude/skills/ (60 paths)
        - .grok/skills/ (30 paths)

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/tracked-counts
  again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status verbose: status-verbose 1`] = `
"--- stdout ---
All Projects are current (1 Project)
Projects:
~/projects/demo: current
Host setup:
- Review and approve the generated SessionStart hook when Codex asks.
  Consequence: Declining the hook prevents Profile Context from loading.
Standing Host setup:
- Trust the bound project in Codex.
  Consequence: Profile Context does not load until the project is trusted.
- Launch Codex from the exact bound project root: ~/projects/demo
  Consequence: Launching from a descendant prevents Profile Context from
    loading.
--- stderr ---
"
`;

exports[`golden snapshots of every human view status blocked filter: status-blocked-filter 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/blocked
    Blocker: .codex/hooks.json is tracked by Git, so Agent Profile Kit cannot
      write to it.
      Requirement: Agent Profile Kit must exclusively manage its generated
        files; Git-tracked paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/blocked' rm -r --cached -- '.codex/hooks.json'
        — it stages their removal from the Git index while the files stay on
        disk; commit afterwards to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/blocked'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/blocked'.
      Affected paths (1):
        - .codex/hooks.json

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/blocked --blocked
  again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view apply receipt: apply-receipt 1`] = `
"--- stdout ---
Apply complete

Applied:
  + 2 generated file additions in 1 project
  + .agent-profile-kit/codex/context.md (~/projects/demo)
  + .codex/hooks.json (~/projects/demo)

First use:
- Review and approve the generated SessionStart hook when Codex asks so the
  Profile can load.
- Trust the bound project in Codex so the Profile can load.
- Launch Codex from the exact bound project root so the Profile can load.

Profile example will load the next time you launch a configured Host from a
  bound Project root.
--- stderr ---
"
`;

exports[`golden snapshots of every human view apply no-op: apply-noop 1`] = `
"--- stdout ---
Apply complete
All Projects were already current.
--- stderr ---
"
`;

exports[`golden snapshots of every human view apply blocked: apply-blocked 1`] = `
"--- stdout ---
Apply blocked

Project: ~/projects/blocked
  Profile: example
  Hosts: codex
  Blocker: .codex/hooks.json is tracked by Git, so Agent Profile Kit cannot
    write to it.
    Requirement: Agent Profile Kit must exclusively manage its generated
      files; Git-tracked paths cannot be replaced.
    Remedy: Choose one. To let Agent Profile Kit manage these files, run
      git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/blocked' rm -r --cached -- '.codex/hooks.json'
      — it stages their removal from the Git index while the files stay on disk;
      commit afterwards to keep the change — then run
      apkit apply '/private/tmp/apkit-golden-xxxx/projects/blocked'.
      To keep Git ownership instead, run
      apkit unbind '/private/tmp/apkit-golden-xxxx/projects/blocked'.
    Affected paths (1):
      - .codex/hooks.json

Git exclusions: 2 entries to add.

Projects: 1 · Pending: blocked · Blockers: 1

Next:
- Resolve the reported blocker, then run apkit apply ~/projects/blocked again.
--- stderr ---
"
`;

exports[`golden snapshots of every human view unbind: unbind 1`] = `
"--- stdout ---
Removed configured Project for ~/projects/demo
  Profile: example
  Hosts: codex
--- stderr ---
"
`;

exports[`golden snapshots of every human view uninstall: uninstall 1`] = `
"--- stdout ---
Removed proven Agent Profile Kit-owned output from 1 Project.

Project: ~/projects/demo
  Removed generated paths:
  - .agent-profile-kit/codex/context.md
  - .codex/hooks.json

Configured Projects preserved.
Next: Run
  apkit unbind
  for configured Projects you no longer want, or
  apkit apply
  to reinstall.
--- stderr ---
"
`;

exports[`golden snapshots of every human view install-temp: install-temp 1`] = `
"--- stdout ---
Installed temporary Profile
  Profile: example
  Host: codex
  Project: ~/projects/temporary
  Temporary installation: 00000000-0000-4000-8000-000000000000
Codex setup:
- Review and approve the generated SessionStart hook when Codex asks.
  Consequence: Declining the hook prevents Profile Context from loading.
- Trust the bound project in Codex.
  Consequence: Profile Context does not load until the project is trusted.
Next: apkit machine remove-temp 00000000-0000-4000-8000-000000000000
--- stderr ---
"
`;

exports[`golden snapshots of every human view remove-temp: remove-temp 1`] = `
"--- stdout ---
Removed temporary Profile
  Temporary installation: 00000000-0000-4000-8000-000000000000
  Project: ~/projects/temporary-remove
--- stderr ---
"
`;

exports[`golden snapshots of every human view blocked temp: blocked-temp 1`] = `
"--- stdout ---
--- stderr ---
apkit: .codex/hooks.json is tracked by Git, so Agent Profile Kit cannot write
  to it.
Remedy: Choose one. To let Agent Profile Kit manage these files, run
  git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/temporary-blocked' rm -r --cached -- '.codex/hooks.json'
  — it stages their removal from the Git index while the files stay on disk;
  commit afterwards to keep the change — then run
  apkit apply '/private/tmp/apkit-golden-xxxx/projects/temporary-blocked'.
  To keep Git ownership instead, run
  apkit unbind '/private/tmp/apkit-golden-xxxx/projects/temporary-blocked'.
"
`;

exports[`golden snapshots of every human view unbound-directory error: unbound-directory-error 1`] = `
"--- stdout ---
--- stderr ---
apkit: directory '/private/tmp/apkit-golden-xxxx/projects/unbound' is not
  configured as a Project
Run apkit bind to configure this directory as a Project.
Run apkit list projects to list configured Projects.
Usage: apkit status [project | --here | --all] [--stale | --blocked] [--verbose] [--json]
"
`;

exports[`rendering matrix for a representative subset root help matrix: root-help-interactive-narrow-nocolor 1`] = `
"--- stdout ---
  /\\  Agent Profile Kit
 /__\\ reusable agent material

Agent Profile Kit composes reusable
  agent material into host-native
  projects.

Usage: apkit <command> [arguments]

First run:
  apkit init
  apkit bind <profile> --host <host>
  apkit status
  apkit apply

  Choose a Profile with apkit guide
    profile; see apkit bind --help for
    supported Host values.

Common commands:
  init
    Initialize or adopt the canonical
      Workspace and settings
  guide
    Show a topic index, full Workspace
      guidance, or one focused authoring
      example
  new
    Create a Skill or Context Module
      scaffold in the configured
      Workspace
  open
    Open the configured Workspace in
      your system file manager
  bind
    Configure a Project with a Profile
      and Agent Hosts, or replace an
      existing binding
  validate
    Check Workspace and settings
      validity
  status
    Show the complete read-only apply
      plan for the complete fleet, the
      containing Project, or one
      explicit Project
  apply
    Sync the complete fleet, the
      containing Project, or one
      explicit Project

More commands:
  Inventory:
  list
    List read-only inventory for
      Projects, Profiles, or Hosts
  Teardown:
  unbind
    Remove a configured Project
  uninstall
    Remove proven Agent Profile
      Kit-owned output from all ordinary
      Project installations
  Machine details:
  info
    Show the engine version and
      selected application locations

For deeper Workspace authoring
  guidance (Context Modules, Skills,
  Profiles, and bindings), run
  apkit guide --full.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset root help matrix: root-help-interactive-narrow-color 1`] = `
"--- stdout ---
  /\\  Agent Profile Kit
 /__\\ reusable agent material

Agent Profile Kit composes reusable
  agent material into host-native
  projects.

\x1B[1;34mUsage: \x1B[36mapkit <command> [arguments]\x1B[0m\x1B[0m

\x1B[1;34mFirst run:\x1B[0m
\x1B[36m  apkit init\x1B[0m
\x1B[36m  apkit bind <profile> --host <host>\x1B[0m
\x1B[36m  apkit status\x1B[0m
\x1B[36m  apkit apply\x1B[0m

  Choose a Profile with apkit guide
    profile; see apkit bind --help for
    supported Host values.

\x1B[1;34mCommon commands:\x1B[0m
\x1B[36m  init\x1B[0m
    Initialize or adopt the canonical
      Workspace and settings
\x1B[36m  guide\x1B[0m
    Show a topic index, full Workspace
      guidance, or one focused authoring
      example
\x1B[36m  new\x1B[0m
    Create a Skill or Context Module
      scaffold in the configured
      Workspace
\x1B[36m  open\x1B[0m
    Open the configured Workspace in
      your system file manager
\x1B[36m  bind\x1B[0m
    Configure a Project with a Profile
      and Agent Hosts, or replace an
      existing binding
\x1B[36m  validate\x1B[0m
    Check Workspace and settings
      validity
\x1B[36m  status\x1B[0m
    Show the complete read-only apply
      plan for the complete fleet, the
      containing Project, or one
      explicit Project
\x1B[36m  apply\x1B[0m
    Sync the complete fleet, the
      containing Project, or one
      explicit Project

\x1B[1;34mMore commands:\x1B[0m
\x1B[1;34m  Inventory:\x1B[0m
\x1B[36m  list\x1B[0m
    List read-only inventory for
      Projects, Profiles, or Hosts
\x1B[1;34m  Teardown:\x1B[0m
\x1B[36m  unbind\x1B[0m
    Remove a configured Project
\x1B[36m  uninstall\x1B[0m
    Remove proven Agent Profile
      Kit-owned output from all ordinary
      Project installations
\x1B[1;34m  Machine details:\x1B[0m
\x1B[36m  info\x1B[0m
    Show the engine version and
      selected application locations

\x1B[2mFor deeper Workspace authoring\x1B[0m
\x1B[2m  guidance (Context Modules, Skills,\x1B[0m
\x1B[2m  Profiles, and bindings), run\x1B[0m
\x1B[2m  apkit guide --full.\x1B[0m
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset root help matrix: root-help-interactive-wide-nocolor 1`] = `
"--- stdout ---
  /\\  Agent Profile Kit
 /__\\ reusable agent material

Agent Profile Kit composes reusable agent material into host-native projects.

Usage: apkit <command> [arguments]

First run:
  apkit init
  apkit bind <profile> --host <host>
  apkit status
  apkit apply

  Choose a Profile with apkit guide profile; see apkit bind --help for supported Host values.

Common commands:
  init
    Initialize or adopt the canonical Workspace and settings
  guide
    Show a topic index, full Workspace guidance, or one focused authoring example
  new
    Create a Skill or Context Module scaffold in the configured Workspace
  open
    Open the configured Workspace in your system file manager
  bind
    Configure a Project with a Profile and Agent Hosts, or replace an existing binding
  validate
    Check Workspace and settings validity
  status
    Show the complete read-only apply plan for the complete fleet, the containing Project, or one
      explicit Project
  apply
    Sync the complete fleet, the containing Project, or one explicit Project

More commands:
  Inventory:
  list
    List read-only inventory for Projects, Profiles, or Hosts
  Teardown:
  unbind
    Remove a configured Project
  uninstall
    Remove proven Agent Profile Kit-owned output from all ordinary Project installations
  Machine details:
  info
    Show the engine version and selected application locations

For deeper Workspace authoring guidance (Context Modules, Skills, Profiles, and bindings), run
  apkit guide --full.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset root help matrix: root-help-interactive-wide-color 1`] = `
"--- stdout ---
  /\\  Agent Profile Kit
 /__\\ reusable agent material

Agent Profile Kit composes reusable agent material into host-native projects.

\x1B[1;34mUsage: \x1B[36mapkit <command> [arguments]\x1B[0m\x1B[0m

\x1B[1;34mFirst run:\x1B[0m
\x1B[36m  apkit init\x1B[0m
\x1B[36m  apkit bind <profile> --host <host>\x1B[0m
\x1B[36m  apkit status\x1B[0m
\x1B[36m  apkit apply\x1B[0m

  Choose a Profile with apkit guide profile; see apkit bind --help for supported Host values.

\x1B[1;34mCommon commands:\x1B[0m
\x1B[36m  init\x1B[0m
    Initialize or adopt the canonical Workspace and settings
\x1B[36m  guide\x1B[0m
    Show a topic index, full Workspace guidance, or one focused authoring example
\x1B[36m  new\x1B[0m
    Create a Skill or Context Module scaffold in the configured Workspace
\x1B[36m  open\x1B[0m
    Open the configured Workspace in your system file manager
\x1B[36m  bind\x1B[0m
    Configure a Project with a Profile and Agent Hosts, or replace an existing binding
\x1B[36m  validate\x1B[0m
    Check Workspace and settings validity
\x1B[36m  status\x1B[0m
    Show the complete read-only apply plan for the complete fleet, the containing Project, or one
      explicit Project
\x1B[36m  apply\x1B[0m
    Sync the complete fleet, the containing Project, or one explicit Project

\x1B[1;34mMore commands:\x1B[0m
\x1B[1;34m  Inventory:\x1B[0m
\x1B[36m  list\x1B[0m
    List read-only inventory for Projects, Profiles, or Hosts
\x1B[1;34m  Teardown:\x1B[0m
\x1B[36m  unbind\x1B[0m
    Remove a configured Project
\x1B[36m  uninstall\x1B[0m
    Remove proven Agent Profile Kit-owned output from all ordinary Project installations
\x1B[1;34m  Machine details:\x1B[0m
\x1B[36m  info\x1B[0m
    Show the engine version and selected application locations

\x1B[2mFor deeper Workspace authoring guidance (Context Modules, Skills, Profiles, and bindings), run\x1B[0m
\x1B[2m  apkit guide --full.\x1B[0m
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset info matrix: info-interactive-narrow-nocolor 1`] = `
"--- stdout ---
Engine version: 0.168.0
Workspace: ~/…/workspace
Local Configuration: ~/…/config.yaml
Installation State: ~/…/manifest.json
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset info matrix: info-interactive-narrow-color 1`] = `
"--- stdout ---
\x1B[35mEngine version: 0.168.0\x1B[0m
Workspace: \x1B[35m~/…/workspace\x1B[0m
Local Configuration: \x1B[35m~/…/config.yaml\x1B[0m
Installation State: \x1B[35m~/…/manifest.json\x1B[0m
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset info matrix: info-interactive-wide-nocolor 1`] = `
"--- stdout ---
Engine version: 0.168.0
Workspace: ~/.agents/agent-profile-kit/workspace
Local Configuration: ~/.agents/agent-profile-kit/config.yaml
Installation State: ~/.agents/agent-profile-kit/state/manifest.json
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset info matrix: info-interactive-wide-color 1`] = `
"--- stdout ---
\x1B[35mEngine version: 0.168.0\x1B[0m
Workspace: \x1B[35m~/.agents/agent-profile-kit/workspace\x1B[0m
Local Configuration: \x1B[35m~/.agents/agent-profile-kit/config.yaml\x1B[0m
Installation State: \x1B[35m~/.agents/agent-profile-kit/state/manifest.json\x1B[0m
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset list projects matrix: list-projects-interactive-narrow-nocolor 1`] = `
"--- stdout ---
Projects (2):

Project: ~/projects/demo
Profile: example
Hosts: codex
State: configured
Project: ~/projects/other
Profile: example
Hosts: codex
State: configured

2 Projects configured.
Use
  apkit status
  to inspect Project lifecycle
  diagnostics.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset list projects matrix: list-projects-interactive-narrow-color 1`] = `
"--- stdout ---
\x1B[1;34mProjects (2):\x1B[0m

Project: ~/projects/demo
Profile: example
Hosts: codex
State: configured
Project: ~/projects/other
Profile: example
Hosts: codex
State: configured

2 Projects configured.
Use
  apkit status
  to inspect Project lifecycle
  diagnostics.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset list projects matrix: list-projects-interactive-wide-nocolor 1`] = `
"--- stdout ---
Projects (2):

~/projects/demo   example  codex  configured
~/projects/other  example  codex  configured

2 Projects configured.
Use apkit status to inspect Project lifecycle diagnostics.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset list projects matrix: list-projects-interactive-wide-color 1`] = `
"--- stdout ---
\x1B[1;34mProjects (2):\x1B[0m

~/projects/demo   example  codex  configured
~/projects/other  example  codex  configured

2 Projects configured.
Use apkit status to inspect Project lifecycle diagnostics.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset blocked status matrix: status-blocked-interactive-narrow-nocolor 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/blocked
    Blocker: .codex/hooks.json is
      tracked by Git, so Agent Profile
      Kit cannot write to it.
      Requirement: Agent Profile Kit
        must exclusively manage its
        generated files; Git-tracked
        paths cannot be replaced.
      Remedy: Choose one. To let Agent
        Profile Kit manage these files,
        run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/blocked' rm -r --cached -- '.codex/hooks.json'
        — it stages their removal from
        the Git index while the files
        stay on disk; commit afterwards
        to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/blocked'.
        To keep Git ownership instead,
        run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/blocked'.
      Affected paths (1):
        - .codex/hooks.json

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run
  apkit status ~/projects/blocked
  again.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset blocked status matrix: status-blocked-interactive-narrow-color 1`] = `
"--- stdout ---
\x1B[31mCannot apply\x1B[0m
- needs attention (1):
  ~/projects/blocked
\x1B[31m    Blocker: .codex/hooks.json is\x1B[0m
\x1B[31m      tracked by Git, so Agent Profile\x1B[0m
\x1B[31m      Kit cannot write to it.\x1B[0m
      Requirement: Agent Profile Kit
        must exclusively manage its
        generated files; Git-tracked
        paths cannot be replaced.
      Remedy: Choose one. To let Agent
        Profile Kit manage these files,
        run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/blocked' rm -r --cached -- '.codex/hooks.json'
        — it stages their removal from
        the Git index while the files
        stay on disk; commit afterwards
        to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/blocked'.
        To keep Git ownership instead,
        run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/blocked'.
      Affected paths (1):
        - .codex/hooks.json

\x1B[31mProjects: 1 · Blockers: 1\x1B[0m

\x1B[1;34mNext:\x1B[0m
- Resolve the reported blocker, then run
  apkit status ~/projects/blocked
  again.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset blocked status matrix: status-blocked-interactive-wide-nocolor 1`] = `
"--- stdout ---
Cannot apply
- needs attention (1):
  ~/projects/blocked
    Blocker: .codex/hooks.json is tracked by Git, so Agent Profile Kit cannot write to it.
      Requirement: Agent Profile Kit must exclusively manage its generated files; Git-tracked
        paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/blocked' rm -r --cached -- '.codex/hooks.json'
        — it stages their removal from the Git index while the files stay on disk; commit afterwards
        to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/blocked'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/blocked'.
      Affected paths (1):
        - .codex/hooks.json

Projects: 1 · Blockers: 1

Next:
- Resolve the reported blocker, then run apkit status ~/projects/blocked again.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset blocked status matrix: status-blocked-interactive-wide-color 1`] = `
"--- stdout ---
\x1B[31mCannot apply\x1B[0m
- needs attention (1):
  ~/projects/blocked
\x1B[31m    Blocker: .codex/hooks.json is tracked by Git, so Agent Profile Kit cannot write to it.\x1B[0m
      Requirement: Agent Profile Kit must exclusively manage its generated files; Git-tracked
        paths cannot be replaced.
      Remedy: Choose one. To let Agent Profile Kit manage these files, run
        git --literal-pathspecs -C '/private/tmp/apkit-golden-xxxx/projects/blocked' rm -r --cached -- '.codex/hooks.json'
        — it stages their removal from the Git index while the files stay on disk; commit afterwards
        to keep the change — then run
        apkit apply '/private/tmp/apkit-golden-xxxx/projects/blocked'.
        To keep Git ownership instead, run
        apkit unbind '/private/tmp/apkit-golden-xxxx/projects/blocked'.
      Affected paths (1):
        - .codex/hooks.json

\x1B[31mProjects: 1 · Blockers: 1\x1B[0m

\x1B[1;34mNext:\x1B[0m
- Resolve the reported blocker, then run apkit status ~/projects/blocked again.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset status verbose matrix: status-verbose-interactive-narrow-nocolor 1`] = `
"--- stdout ---
All Projects are current (1 Project)
Projects:
~/projects/demo: current
Host setup:
- Review and approve the generated
  SessionStart hook when Codex asks.
  Consequence: Declining the hook
    prevents Profile Context from
    loading.
Standing Host setup:
- Trust the bound project in Codex.
  Consequence: Profile Context does
    not load until the project is
    trusted.
- Launch Codex from the exact bound
  project root: ~/projects/demo
  Consequence: Launching from a
    descendant prevents Profile Context
    from loading.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset status verbose matrix: status-verbose-interactive-narrow-color 1`] = `
"--- stdout ---
\x1B[32mAll Projects are current (1 Project)\x1B[0m
\x1B[1;34mProjects:\x1B[0m
~/projects/demo: current
\x1B[1;34mHost setup:\x1B[0m
- Review and approve the generated
  SessionStart hook when Codex asks.
  Consequence: Declining the hook
    prevents Profile Context from
    loading.
\x1B[1;34mStanding Host setup:\x1B[0m
- Trust the bound project in Codex.
  Consequence: Profile Context does
    not load until the project is
    trusted.
- Launch Codex from the exact bound
  project root: ~/projects/demo
  Consequence: Launching from a
    descendant prevents Profile Context
    from loading.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset status verbose matrix: status-verbose-interactive-wide-nocolor 1`] = `
"--- stdout ---
All Projects are current (1 Project)
Projects:
~/projects/demo: current
Host setup:
- Review and approve the generated SessionStart hook when Codex asks.
  Consequence: Declining the hook prevents Profile Context from loading.
Standing Host setup:
- Trust the bound project in Codex.
  Consequence: Profile Context does not load until the project is trusted.
- Launch Codex from the exact bound project root: ~/projects/demo
  Consequence: Launching from a descendant prevents Profile Context from loading.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset status verbose matrix: status-verbose-interactive-wide-color 1`] = `
"--- stdout ---
\x1B[32mAll Projects are current (1 Project)\x1B[0m
\x1B[1;34mProjects:\x1B[0m
~/projects/demo: current
\x1B[1;34mHost setup:\x1B[0m
- Review and approve the generated SessionStart hook when Codex asks.
  Consequence: Declining the hook prevents Profile Context from loading.
\x1B[1;34mStanding Host setup:\x1B[0m
- Trust the bound project in Codex.
  Consequence: Profile Context does not load until the project is trusted.
- Launch Codex from the exact bound project root: ~/projects/demo
  Consequence: Launching from a descendant prevents Profile Context from loading.
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset unbound error matrix: unbound-directory-error-interactive-narrow-nocolor 1`] = `
"--- stdout ---
apkit: directory
  '/private/tmp/apkit-golden-xxxx/projects/unbound'
  is not configured as a Project
Run apkit bind to configure this
  directory as a Project.
Run apkit list projects to list
  configured Projects.
Usage: apkit status [project | --here | --all] [--stale | --blocked] [--verbose] [--json]
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset unbound error matrix: unbound-directory-error-interactive-narrow-color 1`] = `
"--- stdout ---
\x1B[31mapkit: directory\x1B[0m
\x1B[31m  '/private/tmp/apkit-golden-xxxx/projects/unbound'\x1B[0m
\x1B[31m  is not configured as a Project\x1B[0m
Run apkit bind to configure this
  directory as a Project.
Run apkit list projects to list
  configured Projects.
Usage: \x1B[36mapkit status [project | --here | --all] [--stale | --blocked] [--verbose] [--json]\x1B[0m
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset unbound error matrix: unbound-directory-error-interactive-wide-nocolor 1`] = `
"--- stdout ---
apkit: directory '/private/tmp/apkit-golden-xxxx/projects/unbound' is not configured as a Project
Run apkit bind to configure this directory as a Project.
Run apkit list projects to list configured Projects.
Usage: apkit status [project | --here | --all] [--stale | --blocked] [--verbose] [--json]
--- stderr ---
"
`;

exports[`rendering matrix for a representative subset unbound error matrix: unbound-directory-error-interactive-wide-color 1`] = `
"--- stdout ---
\x1B[31mapkit: directory '/private/tmp/apkit-golden-xxxx/projects/unbound' is not configured as a Project\x1B[0m
Run apkit bind to configure this directory as a Project.
Run apkit list projects to list configured Projects.
Usage: \x1B[36mapkit status [project | --here | --all] [--stale | --blocked] [--verbose] [--json]\x1B[0m
--- stderr ---
"
`;
